Fixed Bean Containers getBean method and multiple @Init method invocation